--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "require": {
         "php": "^7.4|^8.0",
-        "illuminate/database": "^8.37|^9.0|^10.0"
+        "illuminate/database": "^8.37|^9.0|^10.0|^11.0"
     },
     "require-dev": {
         "orchestra/testbench": "^6|^7|^8.0",
